# xirtun

./: .env.example  .gitignore  DEPLOY.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: xirtun.service
docs/: architecture.md  decisions.md  known-issues.md  product.md  roadmap.md
src/xirtun/: __init__.py  config.py  export.py  logging_setup.py  main.py  reports.py  run_reminder.py  run_weekly.py  scheduler.py  targets.py
src/xirtun/agent/: tools.py  weekly.py
src/xirtun/llm/: base.py  fake.py  gemini.py
src/xirtun/memory/: diet.py  observations.py
src/xirtun/messaging/: base.py  fake.py  telegram.py
src/xirtun/pipeline/: classify.py  exercise.py  food.py  intake.py  models.py  onboarding.py  onboarding_fields.py  sessions.py  shopping.py  structure.py  symptom.py  weekly_qa.py
src/xirtun/storage/: admin.py  custom_meals.py  db.py  diary.py  foods.py  runs.py
tests/: conftest.py  test_admin.py  test_agent.py  test_config.py  test_custom_meals.py  test_foods.py  test_memory.py  test_messaging.py  test_onboarding.py  test_pipeline.py  test_reminder.py  test_reports.py  test_runs.py  test_scheduler.py  test_sessions.py  test_storage.py  test_targets.py  test_weekly_qa.py
