[project]
name = "xirtun"
version = "0.1.0"
description = "Personal nutritionist agent (single-user, Telegram)"
license = "MIT"
authors = [{ name = "Uroš Podkrižnik" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "APScheduler>=3.10",
    "google-genai>=0.3",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xirtun"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
